# Air32F103-HAL-RCC

./: .gitignore  .gitmodules  AIR32F103Test.ioc  README.md
Core/Inc/: MyPrintf.h  air32f1xx_hal_conf.h  air32f1xx_it.h  main.h
Core/Src/: air32f1xx_hal_msp.c  air32f1xx_it.c  gpio.c  main.c  myPrintf.c  system_air32f1xx.c
MDK-ARM/: .clangd  AIR32F103Test+AIR32F103Test.cbuild.yml  AIR32F103Test+AIR32F103Test.cprj  AIR32F103Test.cbuild-idx.yml  AIR32F103Test.cproject.yaml  AIR32F103Test.csolution.yaml  AIR32F103Test.uvprojx
MDK-ARM/RTE/_AIR32F103Test/: RTE_Components.h
MDK-ARM/tmp/AIR32F103Test/AIR32F103Test/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
